2010-06-25  ddegroot

	* [r1545] .version: Release Candidate RC1

2010-06-25  marcelloceschia

	* [r1543] src/sccp_pbx.c: fixes: 3021117

2010-06-24  marcelloceschia

	* [r1542] src/sccp_line.c:

	* [r1541] src/chan_sccp.h: buttonTemplate

	* [r1540] src/sccp_config.c: fixes seg fault

	* [r1539] src/sccp_actions.c: using device description for top
	  right

	* [r1538] src/sccp_config.c: using for-loop to parse general
	  section

2010-06-23  progs

	* [r1537] src/sccp_actions.c: expansion module 7914 buttons text
	  (Thanks to Guillaume Bour)
	  
	  buttons after the last defined into sccp.conf all displays the
	  last button
	  text
	  Example:
	  sccp.conf
	  ; phone buttons
	  button = line, 160
	  button = empty
	  button = empty
	  button = empty
	  button = empty
	  button = empty
	  
	  ; expansion module #1
	  button = speeddial,112,112,112@default
	  button = empty
	  button = speeddial,113,112,112@default
	  
	  Expansion module display:
	  . 112
	  .
	  . 113
	  . 113
	  . 113
	  . 113
	  . 113
	  . 113
	  . 113
	  . 113
	  . 113
	  . 113
	  . 113
	  . 113
	  
	  2d button is empty (button = empty). Buttons after the 3d may be
	  also
	  empty, but all display '113' (value of the last defined button).
	  
	  My patch correct this by setting SKINNY_BUTTONTYPE_UNUSED value
	  to
	  undefined buttons
	  
	  Guillaume Bour - Proformatique

2010-06-20  davidded

	* [r1536] src/sccp_utils.c: simplified and fixed subscription id
	  matching)

2010-06-20  marcelloceschia

	* [r1535] src/sccp_utils.c: calling line with no subscriptionIdNum
	  should ring all devices - fixed

	* [r1534] src/sccp_utils.c: calling line with no subscriptionIdNum
	  should ring all devices - fixed

	* [r1533] src/sccp_utils.c: calling line with no subscriptionIdNum
	  should ring all devices - fixed

	* [r1532] src/sccp_utils.c: calling line with no subscriptionIdNum
	  should ring all devices - fixed

2010-06-15  progs
